// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> component renders with a DARK theme 1`] = `
.c0 {
  font-family: 'Karla',sans-serif;
  padding: 1.5rem;
  border-radius: 4px;
  background: #282828;
  font-size: 1.75rem;
  color: #E22A23;
  margin: 1rem 0 0;
  text-align: center;
  width: 100%;
}

<h1
  className="c0"
>
  JavaScript Design Patterns
</h1>
`;

exports[`<Title /> component renders with a LIGHT theme 1`] = `
.c0 {
  font-family: 'Karla',sans-serif;
  padding: 1.5rem;
  border-radius: 4px;
  background: #F2E8F2;
  font-size: 1.75rem;
  color: #6F256F;
  margin: 1rem 0 0;
  text-align: center;
  width: 100%;
}

<h1
  className="c0"
>
  JavaScript Design Patterns
</h1>
`;
